dev/tests/cases/neg/23_expr_undef_in_interp.tv
df main() -> void {
    echo!("v={ghost + 1}");
}
